# application_development

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.cron  README.md  alembic.ini  check_reports.py  clean_and_setup.py  crontab  docker-compose.yml  fix_dates_and_create_reports.py  init_db.py  pyproject.toml  requirements.txt  scheduler.py  test_rabbitmq.py  worker.py
alembic/versions/: 0b58c094fab3_create_daily_order_reports_table_lab8.py  223218cb25cd_create_daily_order_reports_table_lab8.py  31e18081a924_add_daily_order_reports_and_order_items.py  b200dbcd8fed_create_daily_order_reports_table.py  bede223393e2_.py  e206747e2409_.py
app/: add_products_orders.py  data.py  generate_report.py  main.py  models.py  producer.py  producer_sync.py  queries.py  redis_practice.py  sql_queries.py  test_caching.py  update_users.py
app/controllers/: __init__.py.backup  cache_controller.py  order_controller.py  product_controller.py  report_controller.py  requirements.txt  test_controller.py  user_controller.py
app/db/: session.py
app/endpoints/: reports.py
app/models/: __init__.py  database_models.py  message_models.py
app/rabbitmq/: consumer.py  producer.py
app/redis/: client.py  mock_client.py
app/repositories/: inventory_log_repository.py  order_repository.py  product_repository.py  report_repository.py  user_repository.py
app/services/: cache_service.py  event_consumer.py  (+8 more)
scripts/: clean_old_reports.py  cron_daily_report.py  cron_test_frequent.py  cron_weekly_report.py  generate_report.py  test_cron.py
tests/: conftest.py  test_api.py
(+9 files in other folders)
