[project]
name = "my_database_project"
version = "0.1.0"
description = "Database project with SQLAlchemy and Alembic"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.44",
]

[tool.isort]
profile = "black"
known_first_party = ["app"]
skip = []

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docker
  | config
  | temp
  | venv
)/
'''